--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
     "boardgame.io": "^0.39.12",
+    "card-deck": "^1.0.1",
     "pokersolver": "^2.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
