--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.8",
     "boardgame.io": "^0.39.12",
     "card-deck": "^1.0.1",
+    "immer": "^7.0.1",
     "pokersolver": "^2.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
