--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "immer": "^7.0.1",
     "pokersolver": "^2.1.3",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "typescript": "^3.9.5"
